<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/color_primary"
            android:text="@string/str_quanly"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_top"
            android:layout_marginTop="16dp"
            android:text="@string/str_cong_viec"
            android:textColor="@color/color_black"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_cong_viec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_top"

            android:layout_margin="8dp"
            android:layout_toRightOf="@+id/txt_cv"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_nd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_cv"
            android:layout_marginTop="32dp"
            android:text="@string/str_noi_dung"
            android:textColor="@color/color_black"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_noi_dung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_cv"
            android:layout_margin="16dp"
            android:layout_toRightOf="@+id/txt_nd"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_ngay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_nd"
            android:layout_marginTop="32dp"
            android:text="@string/str_ngay_ht"
            android:textColor="@color/color_black" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_nd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="--/--/----"
            android:textColor="@color/color_black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt_nd"
            android:layout_marginTop="16dp"
            android:text="@string/str_date" />

        <TextView
            android:id="@+id/txt_gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_ngay"
            android:layout_marginTop="32dp"
            android:text="@string/str_gio_ht"
            android:textColor="@color/color_black" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_ngay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="--:--"
            android:textColor="@color/color_black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt_ngay"
            android:layout_marginTop="16dp"
            android:text="@string/str_time" />

        <Button
            android:id="@+id/btn_them"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_gio"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32sp"
            android:text="@string/str_them_cv" />

        <TextView
            android:id="@+id/txt_danh_sach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_them"
            android:layout_marginTop="8dp"
            android:background="@color/color_primary"
            android:text="Danh sách công việc"
            android:textColor="@color/color_white"
            android:textSize="16sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_job"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_danh_sach">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>
</layout>